# old-sdata

./: .clang-format  .gitignore  CMakeLists.txt
examples/: dialog.sd  dialog.sdat  dialog.sdt  game.sd  game.sdat  game.sdt
src/sdata/: .clang-format  CMakeLists.txt  emitter.hpp  emitter_config.hpp  io.hpp  node.cpp  node.hpp  parser.hpp  scanner.hpp  sdata.hpp  token.hpp
src/sdata/misc/: any_of.hpp  bitwise.hpp  code_exception.hpp  errors.hpp  exception.hpp  exception_desc.hpp  fmt.hpp  format.hpp  source_location.hpp  string.hpp  trim.hpp  type_to_string.hpp
src/sdata/node/: context.hpp  node.hpp
src/sdata/parse/: parser.hpp
src/sdata/regex/: regex.hpp  regex_automata.cpp  regex_automata.hpp  regex_graphviz.cpp  regex_graphviz.hpp  regex_parser.cpp  regex_parser.hpp
src/sdata/scan/: regex.hpp  regex_automata.hpp  regex_category.hpp  regex_parser.hpp  scanner.hpp  token.hpp
test/: CMakeLists.txt  emitter_test.hpp  main.cpp  parser_test.hpp  regex_test.hpp  scanner_test.hpp
