file(GLOB_RECURSE SDATA_SRC ${SOURCE_FILE_REGEX}*.hpp ${SOURCE_FILE_REGEX}*.cpp)

if(${SDATA_BUILD_SHARED_LIBS})
    set(SDATA_LIBRARY_BUILD_TYPE SHARED)
else()
    set(SDATA_LIBRARY_BUILD_TYPE STATIC)
endif()

add_library(sdata ${SDATA_LIBRARY_BUILD_TYPE} ${SDATA_SRC})

target_include_directories(sdata PUBLIC ./)

set_target_properties(sdata PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib
  
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO

  LINKER_LANGUAGE CXX)
